--- a/247.html
+++ b/247.html
@@ -233,9 +233,10 @@ td a img {
 </table>
 <table width="600" border="0" align="center" cellpadding="0" cellspacing="3">
   <tr>
-    <td width="597" height="20" style="font-family:Verdana, Geneva, sans-serif; font-size:12px; text-decoration:none; line-height:20px"><p><strong>#Edicea |</strong><a style="text-decoration:none;color:#000" href="https://rdu.unc.edu.ar/items/67837f58-1673-421c-adcd-beaa4295704c" target="_blank"> Tramas de la colonialidad festiva en la Norpatagonia. Fiestas nacionales, cultura, política y economía entre 2003 y 2015, de Julio Monasterio</a><br />
+    <td width="597" height="20" style="font-family:Verdana, Geneva, sans-serif; font-size:12px; text-decoration:none; line-height:20px"><p><strong>#Dossier CDC |</strong><a style="text-decoration:none;color:#000" href="https://cdc.sociales.unc.edu.ar/" target="_blank"> Por amor al mundo. Aprender a investigar en sociales</a><br />
+      <strong>#Edicea |</strong><a style="text-decoration:none;color:#000" href="https://rdu.unc.edu.ar/items/67837f58-1673-421c-adcd-beaa4295704c" target="_blank"> Tramas de la colonialidad festiva en la Norpatagonia. Fiestas nacionales, cultura, política y economía entre 2003 y 2015, de Julio Monasterio</a><br />
         <strong>#Edicea |</strong><a style="text-decoration:none;color:#000" href="https://rdu.unc.edu.ar/collections/f84d27d8-48e8-4257-ad0e-1646eb74b11a" target="_blank"> Carreras de drones en Córdoba. Asociaciones de interfaces para volar, de Sebastián Agustín Torrez</a><br />
-      <strong>#Edicea |</strong><a style="text-decoration:none;color:#000" href="https://rdu.unc.edu.ar/items/96420bab-b816-4175-8cc3-36e3f80de3ef" target="_blank"> &quot;La ciencia como vocación&quot; y &quot;La política como vocación&quot; de Max Weber: ¿dos profesiones, una ética?, de Marcos Hernández Carballido</a><a style="text-decoration:none;color:#000" href="http://hdl.handle.net/11086/558029" target="_blank"><br />
+        <strong>#Edicea |</strong><a style="text-decoration:none;color:#000" href="https://rdu.unc.edu.ar/items/96420bab-b816-4175-8cc3-36e3f80de3ef" target="_blank"> &quot;La ciencia como vocación&quot; y &quot;La política como vocación&quot; de Max Weber: ¿dos profesiones, una ética?, de Marcos Hernández Carballido</a><a style="text-decoration:none;color:#000" href="http://hdl.handle.net/11086/558029" target="_blank"><br />
     </a></p></td>
   </tr>
 </table>
