--- a/247.html
+++ b/247.html
@@ -107,11 +107,29 @@ td a img {
   </tr>
 </table>
 <table width="607" border="0" align="center" cellspacing="4">
+  <tr>
+    <td height="21" ><img src="https://sociales.unc.edu.ar/sites/default/files/iconoboletin_socialesopina.jpg" width="600" height="30" style="display: block; border-radius: 4px;"/></td>
+  </tr>
+</table>
+<table width="602" border="0" align="center" cellpadding="0" cellspacing="0">
+  <tr>
+    <td height="29" ><h2 style="font-family:Verdana, Geneva, sans-serif; font-size:14px;"><a style="color:#087CCD; text-decoration:none" href="https://sociales.unc.edu.ar/content/25n-qu-sucede-cuando-el-estado-deja-de-garantizar-derechos" target="_blank"><strong id="docs-internal-guid-9a72e590-7fff-185e-5170-cb6102613f2a">25N Día Internacional de lucha contra las violencias hacia mujeres y disidencias:  ¿Qué sucede cuando el Estado deja de garantizar derechos?</strong></a></h2></td>
+  </tr>
+</table>
+<table width="607" border="0" align="center" cellspacing="4">
   <tbody>
     <tr>
       <td height="21"><img src="https://sociales.unc.edu.ar/sites/default/files/sucedio.jpg" width="600" height="30" style="display: block; border-radius: 4px;" /></td>
     </tr>
   </tbody>
+</table>
+<table width="604" border="0" align="center" cellpadding="0" cellspacing="3">
+  <tr>
+    <td width="170" height="120" ><img src="https://sociales.unc.edu.ar/sites/default/files/reconocimiento-abanderadas-y-escoltas-de-sociales-en-el-vicerrectorado-de-la-unc.jpg" width="170" height="120" alt="" style="display: block; border-radius: 4px;"/></td>
+    <td width="123" align="left" valign="top" style="font-family:Verdana, Geneva, sans-serif; font-size:14px;"><h2 style="font-family:Verdana, Geneva, sans-serif; font-size:12px;"><a style="color:#087CCD; text-decoration:none" href="https://www.instagram.com/p/DRK4tBOATbx/?img_index=1" target="_blank">Sociales y Laboratorio Pop presentes en la 17° Marcha del Orgullo LBGTQ+</a></h2></td>
+    <td width="170" ><img src="https://sociales.unc.edu.ar/sites/default/files/reconocimiento-abanderadas-y-escoltas-de-sociales-en-el-vicerrectorado-de-la-unc.jpg" width="170" height="120" alt="" style="display: block; border-radius: 4px;"/></td>
+    <td width="126" align="left" valign="top" style="font-family:Verdana, Geneva, sans-serif; font-size:14px;"><h2 style="font-family:Verdana, Geneva, sans-serif; font-size:12px;"><a style="color:#087CCD; text-decoration:none" href="https://sociales.unc.edu.ar/content/inici-la-diplomatura-universitaria-esi-para-las-organizaciones-sociales" target="_blank"></a><a style="color:#087CCD; text-decoration:none" href="https://sociales.unc.edu.ar/content/qu-se-dice-y-qu-no-se-dice-sobre-la-cuesti-n-energ-tica" target="_blank"></a><a style="color:#087CCD; text-decoration:none" href="https://www.instagram.com/p/DQ4XKxEjpA6/?next=%2F&amp;img_index=1" target="_blank">El Archivo Gregorio Bermann participó por primera vez en La Noche de los Museos</a></h2></td>
+  </tr>
 </table>
 <table width="604" border="0" align="center" cellpadding="0" cellspacing="3">
   <tr>
@@ -140,9 +158,9 @@ td a img {
 <table width="604" border="0" align="center" cellpadding="0" cellspacing="3">
   <tr>
     <td width="170" height="120" ><img src="https://sociales.unc.edu.ar/sites/default/files/reconocimiento-abanderadas-y-escoltas-de-sociales-en-el-vicerrectorado-de-la-unc.jpg" width="170" height="120" alt="" style="display: block; border-radius: 4px;"/></td>
-    <td width="123" align="left" valign="top" style="font-family:Verdana, Geneva, sans-serif; font-size:14px;"><h2 style="font-family:Verdana, Geneva, sans-serif; font-size:12px;"><a style="color:#087CCD; text-decoration:none" href="https://sociales.unc.edu.ar/content/educaci-n-y-pol-ticas-p-blicas-experiencias-y-presentaci-n-de-trabajos" target="_blank">Educación y Políticas Públicas: experiencias y presentación de trabajos</a></h2></td>
-    <td width="170" ><p><img src="https://sociales.unc.edu.ar/sites/default/files/reconocimiento-abanderadas-y-escoltas-de-sociales-en-el-vicerrectorado-de-la-unc.jpg" width="170" height="120" alt="" style="display: block; border-radius: 4px;"/></p></td>
-    <td width="126" align="left" valign="top" style="font-family:Verdana, Geneva, sans-serif; font-size:14px;"><h2 style="font-family:Verdana, Geneva, sans-serif; font-size:12px;"><a style="color:#087CCD; text-decoration:none" href="https://sociales.unc.edu.ar/content/inici-la-diplomatura-universitaria-esi-para-las-organizaciones-sociales" target="_blank"></a><a style="color:#087CCD; text-decoration:none" href="https://sociales.unc.edu.ar/content/qu-se-dice-y-qu-no-se-dice-sobre-la-cuesti-n-energ-tica" target="_blank"></a><a style="color:#087CCD; text-decoration:none" href="https://sociales.unc.edu.ar/content/pasantes-de-trabajo-social-realizaron-un-encuentro-en-sociales" target="_blank">Pasantes de Trabajo Social realizaron un encuentro en Sociales</a></h2></td>
+    <td width="123" align="left" valign="top" style="font-family:Verdana, Geneva, sans-serif; font-size:14px;"><h2 style="font-family:Verdana, Geneva, sans-serif; font-size:12px;"><a style="color:#087CCD; text-decoration:none" href="https://sociales.unc.edu.ar/sites/default/files/rhcd_467_rs-2025-00985887-unc-dec_fcs.pdf" target="_blank">Emi D'Ambra 2025 l El HCD reconoció la labor social y política  de la Mesa de Trabajo en Discapacidad y DDHH de  Córdoba</a></h2></td>
+    <td width="170" ><p>&nbsp;</p></td>
+    <td width="126" align="left" valign="top" style="font-family:Verdana, Geneva, sans-serif; font-size:14px;"><h2 style="font-family:Verdana, Geneva, sans-serif; font-size:12px;"><a style="color:#087CCD; text-decoration:none" href="https://sociales.unc.edu.ar/content/inici-la-diplomatura-universitaria-esi-para-las-organizaciones-sociales" target="_blank"></a><a style="color:#087CCD; text-decoration:none" href="https://sociales.unc.edu.ar/content/qu-se-dice-y-qu-no-se-dice-sobre-la-cuesti-n-energ-tica" target="_blank"></a></h2></td>
   </tr>
 </table>
 <table width="600" border="0" align="center" cellspacing="0">
@@ -172,7 +190,7 @@ td a img {
   <tbody><tr>
     <td width="597" height="40" align="left" style="font-family:Verdana, Geneva, sans-serif; font-size:12px; text-decoration:none; line-height:20px"><p><strong>#Apertura </strong> <strong>| </strong><a href="https://sociales.unc.edu.ar/inscripcionesEPAI" target="_blank" style="text-decoration:none;color:#000">1° Cohorte a Distancia de la Especialización en Especialización en Producción y Análisis de Información para Políticas Públicas</a><br />
       <strong>#Apertura </strong> <strong>| </strong><a href="https://sociales.unc.edu.ar/content/inscripcionEAPPYM" target="_blank" style="text-decoration:none;color:#000">9° Cohorte Especialización en Administración pública provincial y municipal</a><br />
-      <strong>#Apertura </strong> <strong>| </strong><a href="https://sociales.unc.edu.ar/content/apertura-8-cohorte-del-doctorado-en-administraci-n-y-pol-tica-p-blica" target="_blank" style="text-decoration:none;color:#000">8° Cohorte del Doctorado en Administración y Política Pública</a></p></td></tr></tbody></table>
+  <strong>#Apertura </strong> <strong>| </strong><a href="https://sociales.unc.edu.ar/content/apertura-8-cohorte-del-doctorado-en-administraci-n-y-pol-tica-p-blica" target="_blank" style="text-decoration:none;color:#000">8° Cohorte del Doctorado en Administración y Política Pública</a></p></td></tr></tbody></table>
 <table width="600" border="0" align="center" cellpadding="0" cellspacing="0">
   <tbody><tr>
     <td height="19"><img src="https://sociales.unc.edu.ar/sites/default/files/iconoboletin_docente.jpg" width="600" height="30" style="display: block; border-radius: 4px;"></td>
