--- a/247.html
+++ b/247.html
@@ -116,6 +116,11 @@ td a img {
     <td height="29" ><h2 style="font-family:Verdana, Geneva, sans-serif; font-size:14px;"><a style="color:#087CCD; text-decoration:none" href="https://sociales.unc.edu.ar/content/25n-qu-sucede-cuando-el-estado-deja-de-garantizar-derechos" target="_blank"><strong id="docs-internal-guid-9a72e590-7fff-185e-5170-cb6102613f2a">25N Día Internacional de lucha contra las violencias hacia mujeres y disidencias:  ¿Qué sucede cuando el Estado deja de garantizar derechos?</strong></a></h2></td>
   </tr>
 </table>
+<table width="602" border="0" align="center" cellpadding="0" cellspacing="0">
+  <tr>
+    <td height="29" ><h2 style="font-family:Verdana, Geneva, sans-serif; font-size:14px;"><a style="color:#087CCD; text-decoration:none" href="https://sociales.unc.edu.ar/content/sociales-adhiere-la-declaraci-n-por-los-20-os-de-la-ley-26061-sobre-la-protecci-n-integral" target="_blank"><strong id="docs-internal-guid-9a72e590-7fff-185e-5170-cb6102613f2a2">Sociales adhiere a la declaración por los 20 años de la Ley 26.061 sobre la Protección Integral de los Derechos de la Niñas, Niños y Adolescentes </strong></a></h2></td>
+  </tr>
+</table>
 <table width="607" border="0" align="center" cellspacing="4">
   <tbody>
     <tr>
