--- a/247.html
+++ b/247.html
@@ -178,7 +178,7 @@ td a img {
 <table width="600" border="0" align="center" cellpadding="0" cellspacing="0">
   <tbody><tr>
     <td width="597" height="40" style="font-family:Verdana, Geneva, sans-serif; font-size:12px; text-decoration:none; line-height:20px"><p><strong><strong>#Convocatoria  | </strong></strong><a href="https://sociales.unc.edu.ar/content/convocatoria-ayudant-para-ciclo-introductorio-del-ingreso-2026" target="_blank" style="text-decoration:none;color:#000">Ayudantías para Ciclo Introductorio del Ingreso 2026</a><br />
-      <strong><strong>#Inscripciones  | </strong></strong><a href="https://sociales.unc.edu.ar/node/3748" target="_blank" style="text-decoration:none;color:#000">Sumate al banco de veedores de la FCS<br />
+      <strong><strong>#Conocatoria  | </strong></strong><a href="https://sociales.unc.edu.ar/content/banco-de-veedores" target="_blank" style="text-decoration:none;color:#000">Banco de veedores y Comités Evaluadores<br />
       </a><strong><strong>#Encuesta  | </strong></strong><a href="https://sociales.unc.edu.ar/content/encuesta-para-estudiantes-inteligencia-artificial-en-las-pr-cticas-de-estudio-y-aprendizaje" target="_blank" style="text-decoration:none;color:#000">Inteligencia Artificial en las prácticas de estudio y aprendizaje de estudiantes de la FCS<br />
       </a><strong><strong>#Novedades  | </strong></strong><a href="https://sociales.unc.edu.ar/content/nuevo-horario-de-atenci-n-del-despacho-de-estudiantes-durante-noviembre-y-diciembre" target="_blank" style="text-decoration:none;color:#000">Nuevo horario de atención del Despacho de Estudiantes durante noviembre y diciembre</a><br />
         <strong><strong>#Extensión | </strong></strong><a href="https://sociales.unc.edu.ar/content/encuesta-estudiantes-sobre-extensi-n-universitaria-conoc-s-los-proyectos-o-inicitivas" target="_blank" style="text-decoration:none;color:#000">Encuesta a estudiantes:¿conocés los proyectos o iniciativas extensionistas?</a><br />
@@ -212,6 +212,18 @@ td a img {
     </p></td>
   </tr>
 </tbody></table>
+<table width="600" border="0" align="center" cellspacing="4">
+  <tr>
+    <td height="35" ><img src="https://sociales.unc.edu.ar/sites/default/files/iconoboletin_nodocentes.jpg" width="600" height="30" style="display: block; border-radius: 4px;" /></td>
+    <!--Bloque contenido de Puedeinteresarte. No tocar estilos. Reemplazar contenido, con cortar y pegar.-->
+  </tr>
+</table>
+<table width="600" border="0" align="center" cellpadding="0" cellspacing="3">
+  <tr>
+    <td width="597" height="20" style="font-family:Verdana, Geneva, sans-serif; font-size:12px; text-decoration:none; line-height:20px"><p><strong id="docs-internal-guid-dfebf336-7fff-2202-7402-e8d5c1d93d3">#Concursos | </strong><a style="text-decoration:none;color:#000" href="https://sociales.unc.edu.ar/content/actos-preparatorios" target="_blank">Actos preparatorios: Concurso Nodocente Cerrado Interno, Cerrado General y/o Abierto Cargo 3667/1 en la Secretaría de Asuntos Estudiantiles</a><br />
+    <strong id="docs-internal-guid-dfebf336-7fff-2202-7402-e8d5c1d93d">#Concursos | </strong><a style="text-decoration:none;color:#000" href="https://sociales.unc.edu.ar/content/actos-preparatorios" target="_blank">Actos preparatorios: Concurso Nodocente Cerrado Interno, Cerrado General y/o Abierto Cargo 3667/1 en la Secretaría Académica</a></p></td>
+  </tr>
+</table>
 <table width="600" border="0" align="center" cellspacing="4">
   <tbody>
     <tr>
@@ -306,8 +318,8 @@ td a img {
     <td width="288" align="left" valign="top" style="font-family:Verdana, Geneva, sans-serif; font-size:12px; text-decoration:none; color:#000; line-height:20px">La Ranchada   |<strong> </strong><a style="text-decoration:none;color:#000" href="https://laranchada.com.ar/taller-sobre-la-informacion-publica-y-el-acceso-a-derechos" target="_blank"><strong>Taller sobre la Información Pública y el acceso a derechos<br />
       <br />
     </strong></a></td>
-    <td width="25" align="left" valign="top" style="font-family:Verdana, Geneva, sans-serif; font-size:12px; text-decoration:none; color:#000; line-height:20px">&nbsp;</td>
-    <td width="257" align="left" valign="top" style="font-family:Verdana, Geneva, sans-serif; font-size:12px; text-decoration:none; color:#000; line-height:20px">&nbsp;</td>
+    <td width="25" align="left" valign="top" style="font-family:Verdana, Geneva, sans-serif; font-size:12px; text-decoration:none; color:#000; line-height:20px"><img src="https://sociales.unc.edu.ar/sites/default/files/sm2.jpg" width="25" height="25" style="display: block; border-radius: 4px;"/></td>
+    <td width="257" align="left" valign="top" style="font-family:Verdana, Geneva, sans-serif; font-size:12px; text-decoration:none; color:#000; line-height:20px">Cba24n   |<strong> </strong><a style="text-decoration:none;color:#000" href="https://www.cba24n.com.ar/universidad/la-unc-reconocio-a-los-mejores-promedios-de-cada-facultad_a691c79980b47891cbab9018e" target="_blank"><strong>La UNC reconoció a los mejores promedios de cada facultad</strong></a></td>
   </tr>
   <tr>
     <td width="29" align="left" valign="top" style="font-family:Verdana, Geneva, sans-serif; font-size:12px; text-decoration:none; color:#000; line-height:20px">&nbsp;</td>
