--- a/247.html
+++ b/247.html
@@ -64,7 +64,7 @@ td a img {
 <table width="606" border="0" align="center" cellpadding="3" cellspacing="0">
   <tbody><tr>
     <td width="299"><a href="https://sociales.unc.edu.ar/content/manuela-burgos-y-mart-n-torres-egresades-de-la-fcs-recibieron-la-menci-n-de-honor-del-premio " target="_blank"><img src="https://sociales.unc.edu.ar/sites/default/files/inscripciones-abiertas-ingreso-2026.jpg" width="295" height="196" alt="" style="display: block; border-radius: 4px;" /></a></td>
-    <td width="295"><a href="https://www.instagram.com/p/DQ9sqfKjfpC/?next=%2F&amp;img_index=1" target="_blank"><img src="https://sociales.unc.edu.ar/sites/default/files/inscripciones-abiertas-ingreso-2026.jpg" width="295" height="196" alt="" style="display: block; border-radius: 4px;" /></a><a href="https://sociales.unc.edu.ar/content/elecciones-de-directora-y-consejo-acad-mico-ipsis" target="_blank"></a></td>
+    <td width="295"><a href="https://www.youtube.com/watch?v=FohIKNOZ1Mw" target="_blank"><img src="https://sociales.unc.edu.ar/sites/default/files/inscripciones-abiertas-ingreso-2026.jpg" width="295" height="196" alt="" style="display: block; border-radius: 4px;" /></a><a href="https://sociales.unc.edu.ar/content/elecciones-de-directora-y-consejo-acad-mico-ipsis" target="_blank"></a></td>
   </tr>
   <tr>
     <td width="299" height="48" align="left" valign="top"><h4><span style="font-family:Verdana, Geneva, sans-serif; font-size:12px; "><strong>Este reconocimiento destaca las trayectorias de Manuela y Martín, por el esfuerzo sostenido y sus compromisos con el conocimiento. Resultado de una comunidad que enseña, acompaña y sostiene, y de una universidad pública que abre puertas, garantiza derechos y transforma vidas.  </strong></span></h4></td>
