--- a/index.html
+++ b/index.html
@@ -30,6 +30,33 @@
 	<a href="237.html" target="_blank">Boletín Número 237/ 19/06/2025</a>
 	</br>
 	<a href="236.html" target="_blank">Boletín Número 236/ 05/06/2025</a>
+	</br>
+	<a href="235.html" target="_blank">Boletín Número 235/ 22/05/2025</a>
+	</br>
+	<a href="234.html" target="_blank">Boletín Número 234/ 08/05/2025</a>
+	</br>
+	<a href="233.html" target="_blank">Boletín Número 233/ 24/04/2025</a>
+	</br>
+	<a href="232.html" target="_blank">Boletín Número 232/ 03/04/2025</a>
+	</br>
+	<a href="231.html" target="_blank">Boletín Número 231/ 20/03/2025</a>
+	</br>
+	<a href="230.html" target="_blank">Boletín Número 230/ 06/03/2025</a>
+	</br>
+	<a href="229.html" target="_blank">Boletín Número 229/ 20/02/2025</a>
+	</br>
+	<a href="228.html" target="_blank">Boletín Número 228/ 13/12/2024</a>
+	</br>
+	<a href="227.html" target="_blank">Boletín Número 227/ 28/11/2024</a>
+	</br>
+	<a href="226.html" target="_blank">Boletín Número 226/ 15/11/2024</a>
+	</br>
+	<a href="225.html" target="_blank">Boletín Número 225/ 31/10/2024</a>
+	</br>
+	<a href="224.html" target="_blank">Boletín Número 224/ 18/10/2024</a>
+	</br>
+	<a href="223.html" target="_blank">Boletín Número 223/ 25/09/2024</a>
+	
 
 
 
@@ -40,34 +67,6 @@
 
 
 
-
-Boletín Número 235/ 22/05/2025
-
-Boletín Número 234/ 08/05/2025
-
-Boletín Número 233/ 24/04/2025
-
-Boletín Número 232/ 03/04/2025
-
-Boletín Número 231/ 20/03/2025
-
-Boletín Número 230/ 06/03/2025
-
-Boletín Número 229/ 20/02/2025
-
-El 2024 de Sociales en nuestros boletines:
-
-Boletín Número 228/ 13/12/2024
-
-Boletín Número 227/ 28/11/2024
-
-Boletín Número 226/ 15/11/2024
-
-Boletín Número 225/ 31/10/2024
-
-Boletín Número 224/ 18/10/2024
-
-Boletín Número 223/ 25/09/2024
 
 Boletín Número 222/ 12/09/2024
 
@@ -531,6 +530,7 @@ Boletín Número 1 / 11/11/2016
 
 </body>
 </html>
+
 
 
 
