--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
 <body>
 	<h1>Boletines Sociales</h1>
+	<a href="248.html" target="_blank">Boletín Número 248/ 04/12/2025</a>
+	</br>
 	<a href="247.html" target="_blank">Boletín Número 247/ 20/11/2025</a>
 	</br>
 	<a href="246.html" target="_blank">Boletín Número 246/ 06/11/2025</a>
@@ -507,6 +509,7 @@
 
 </body>
 </html>
+
 
 
 
