--- a/248.html
+++ b/248.html
@@ -69,7 +69,7 @@ td a img {
   </tr>
   <tr>
     <td width="299" height="48" align="left" valign="top"><h4><span style="font-family:Verdana, Geneva, sans-serif; font-size:12px; "><strong>Surgió luego de la evaluación de los Proyectos de Investigación, Desarrollo, Tecnología y Artes (PIDTA) presentados en la Convocatoria 2025 de la Secretaría de Ciencia y Tecnología de la UNC (Secyt).  </strong></span></h4></td>
-    <td width="295" height="48" align="left" valign="top"><h4 style="font-family:Verdana, Geneva, sans-serif; font-size:12px; "><strong>Reconocimiento Emi D’Ambra.</strong></h4></td>
+    <td width="295" height="48" align="left" valign="top"><h4 style="font-family:Verdana, Geneva, sans-serif; font-size:12px; "><strong>Como hace ya varios años, la FCS entrega este reconocimiento en honor a Emilia Villares de D&rsquo;Ambra, reconocida luchadora por los Derechos Humanos en Córdoba.</strong></h4></td>
   </tr>
 </tbody></table>
 <table width="602" border="0" align="center" cellpadding="0" cellspacing="0">
@@ -128,7 +128,7 @@ td a img {
     <td width="170" height="120" ><img src="https://sociales.unc.edu.ar/sites/default/files/hcd-reconocimiento-a-la-labor-social-y-politica-emi-dambra-2025.jpg" width="170" height="120" alt="" style="display: block; border-radius: 4px;"/></td>
     <td width="123" align="left" valign="top" style="font-family:Verdana, Geneva, sans-serif; font-size:14px;"><h2 style="font-family:Verdana, Geneva, sans-serif; font-size:12px;"><a style="color:#087CCD; text-decoration:none" href="https://www.instagram.com/p/DRK4tBOATbx/?img_index=1" target="_blank"></a><a style="color:#087CCD; text-decoration:none" href="https://sociales.unc.edu.ar/content/estudiantes-de-la-fcs-participaron-del-modelo-uni-n-europea-en-santa-fe" target="_blank">Estudiantes de la FCS participaron del Modelo Unión Europea en Santa Fe</a></h2></td>
     <td width="170" ><img src="https://sociales.unc.edu.ar/sites/default/files/educacion-y-politicas-publicas-experiencias-y-presentacion-de-trabajos.jpg" width="170" height="120" alt="" style="display: block; border-radius: 4px;"/></td>
-    <td width="126" align="left" valign="top" style="font-family:Verdana, Geneva, sans-serif; font-size:14px;"><h2 style="font-family:Verdana, Geneva, sans-serif; font-size:12px;"><a style="color:#087CCD; text-decoration:none" href="https://sociales.unc.edu.ar/content/inici-la-diplomatura-universitaria-esi-para-las-organizaciones-sociales" target="_blank"></a><a style="color:#087CCD; text-decoration:none" href="https://sociales.unc.edu.ar/content/qu-se-dice-y-qu-no-se-dice-sobre-la-cuesti-n-energ-tica" target="_blank"></a><a style="color:#087CCD; text-decoration:none" href="https://www.youtube.com/watch?v=GCS73jG7YgI&amp;list=PL0x4u8NAZ_YUGe28Suv1S8ThOiLHFpVBa&amp;index=2" target="_blank">5° Sesión de la Cátedra Libre Immanuel Wallerstein con William I. Robinson</a></h2></td>
+    <td width="126" align="left" valign="top" style="font-family:Verdana, Geneva, sans-serif; font-size:14px;"><h2 style="font-family:Verdana, Geneva, sans-serif; font-size:12px;"><a style="color:#087CCD; text-decoration:none" href="https://sociales.unc.edu.ar/content/inici-la-diplomatura-universitaria-esi-para-las-organizaciones-sociales" target="_blank"></a><a style="color:#087CCD; text-decoration:none" href="https://sociales.unc.edu.ar/content/qu-se-dice-y-qu-no-se-dice-sobre-la-cuesti-n-energ-tica" target="_blank"></a><a style="color:#087CCD; text-decoration:none" href="https://sociales.unc.edu.ar/content/5-sesi-n-c-tedra-libre-immanuel-wallerstein-con-william-robinson" target="_blank">5° Sesión de la Cátedra Libre Immanuel Wallerstein con William I. Robinson</a></h2></td>
   </tr>
 </table>
 <table width="604" border="0" align="center" cellpadding="0" cellspacing="3">
@@ -253,11 +253,11 @@ td a img {
     </tr>
     <tr>
       <td align="center" style="font-family:Verdana, Geneva, sans-serif; font-size:12px"><strong>12/12/2025</strong></td>
-      <td bgcolor="#9ad2b0" style="font-family:Verdana, Geneva, sans-serif; font-size:12px; margin-left:5px; color:#000"><strong id="docs-internal-guid-8fba4c47-7fff-65c2-8d8c-c2f47ca"><a style="text-decoration:none;color:#000" href="https://sociales.unc.edu.ar/content/acto-por-los-10-os-de-la-fcs-memoria-viva-ciencia-que-transforma-futuro-com-n" target="_blank">Celebración de los 10 años de la facu</a></strong></td>
+      <td bgcolor="#9ad2b0" style="font-family:Verdana, Geneva, sans-serif; font-size:12px; margin-left:5px; color:#000"><strong id="docs-internal-guid-8fba4c47-7fff-65c2-8d8c-c2f47ca"><a style="text-decoration:none;color:#000" href="https://sociales.unc.edu.ar/content/acto-por-los-10-os-de-la-fcs-memoria-viva-ciencia-que-transforma-futuro-com-n" target="_blank">Celebración de los 10 años de la FCS</a></strong></td>
     </tr>
     <tr>
       <td align="center" style="font-family:Verdana, Geneva, sans-serif; font-size:12px"><strong>12/12/2025</strong></td>
-      <td bgcolor="#9ad2b0" style="font-family:Verdana, Geneva, sans-serif; font-size:12px; margin-left:5px; color:#000"><strong id="docs-internal-guid-8fba4c47-7fff-65c2-8d8c-c2f47ca2"><a style="text-decoration:none;color:#000" href="https://sociales.unc.edu.ar/content/5-sesi-n-c-tedra-libre-immanuel-wallerstein-con-william-robinson" target="_blank">emi dambra</a></strong></td>
+      <td bgcolor="#9ad2b0" style="font-family:Verdana, Geneva, sans-serif; font-size:12px; margin-left:5px; color:#000"><strong id="docs-internal-guid-8fba4c47-7fff-65c2-8d8c-c2f47ca2"><a style="text-decoration:none;color:#000" href="https://sociales.unc.edu.ar/content/reconocimiento-emi-dambra-2025-mesa-de-trabajo-en-discapacidad-y-derechos-humanos-de-la" target="_blank">Entrega Reconocimiento Emi D’Ambra</a></strong></td>
     </tr>
   </tbody>
 </table>
