--- a/249.html
+++ b/249.html
@@ -156,6 +156,14 @@ td a img {
     <td width="126" align="left" valign="top" style="font-family:Verdana, Geneva, sans-serif; font-size:14px;"><h2 style="font-family:Verdana, Geneva, sans-serif; font-size:12px;"><a style="color:#087CCD; text-decoration:none" href="https://sociales.unc.edu.ar/content/inici-la-diplomatura-universitaria-esi-para-las-organizaciones-sociales" target="_blank"></a><a style="color:#087CCD; text-decoration:none" href="https://sociales.unc.edu.ar/content/qu-se-dice-y-qu-no-se-dice-sobre-la-cuesti-n-energ-tica" target="_blank"></a><a style="color:#087CCD; text-decoration:none" href="https://sociales.unc.edu.ar/content/cuidado-de-la-salud-y-educaci-n-ambiental-en-pueblo-alberdi" target="_blank">Cuidado de la salud y educación ambiental en Pueblo Alberdi</a></h2></td>
   </tr>
 </table>
+<table width="604" border="0" align="center" cellpadding="0" cellspacing="3">
+  <tr>
+    <td width="170" height="120" ><img src="https://sociales.unc.edu.ar/sites/default/files/sociales-y-laboratorio-pop-presentes-en-la-decimoseptima-marcha-del-orgullo-lbgtq.jpg" width="170" height="120" alt="" style="display: block; border-radius: 4px;"/></td>
+    <td width="123" align="left" valign="top" style="font-family:Verdana, Geneva, sans-serif; font-size:14px;"><h2 style="font-family:Verdana, Geneva, sans-serif; font-size:12px;"><a style="color:#087CCD; text-decoration:none" href="https://sociales.unc.edu.ar/content/comunicaci-n-p-blica-de-producciones-extensionistas-2025" target="_blank">Comunicación Pública de Producciones Extensionistas 2025</a></h2></td>
+    <td width="170" >&nbsp;</td>
+    <td width="126" align="left" valign="top" style="font-family:Verdana, Geneva, sans-serif; font-size:14px;"><h2 style="font-family:Verdana, Geneva, sans-serif; font-size:12px;"><a style="color:#087CCD; text-decoration:none" href="https://sociales.unc.edu.ar/content/inici-la-diplomatura-universitaria-esi-para-las-organizaciones-sociales" target="_blank"></a><a style="color:#087CCD; text-decoration:none" href="https://sociales.unc.edu.ar/content/qu-se-dice-y-qu-no-se-dice-sobre-la-cuesti-n-energ-tica" target="_blank"></a></h2></td>
+  </tr>
+</table>
 <table width="600" border="0" align="center" cellspacing="0">
   <tbody><tr>
  
