--- a/249.html
+++ b/249.html
@@ -273,7 +273,7 @@ td a img {
 <table width="600" border="0" align="center" cellpadding="0" cellspacing="3">
   <tr>
     <td width="597" height="20" style="font-family:Verdana, Geneva, sans-serif; font-size:12px; text-decoration:none; line-height:20px"><p><strong>#Convocatoria |</strong><a style="text-decoration:none;color:#000" href="https://sociales.unc.edu.ar/content/convocatoria-para-publicar-en-estudios-n-56" target="_blank"> Artículos para la Revista Estudios N°56 “A 50 años del Golpe. Poder militar y dictaduras en América Latina”</a><br />
-      <a style="text-decoration:none;color:#000" href="http://hdl.handle.net/11086/558029" target="_blank"><strong>#CDC |</strong> Artículos para la Revista Estudios N°56 “A 50 años del Golpe. Poder militar y dictaduras en América Latina”</a><br />
+      <a style="text-decoration:none;color:#000" href="http://hdl.handle.net/11086/558029" target="_blank"><strong>#CDC |</strong> falta</a><br />
       <a style="text-decoration:none;color:#000" href="https://libreria.clacso.org/publicacion.php?p=4613&amp;c=1" target="_blank"><strong>#Novedades |</strong> “Desafíos de las democracias en América Latina”, de Gerardo Caetano, René Ramírez y Esteban Torres<br />
       </a></p></td>
   </tr>
@@ -289,20 +289,12 @@ td a img {
   <tbody>
     <tr>
       <!--Bloque contenido de FCSinvestiga. No tocar estilos. Reemplazar contenido, con cortar y pegar.-->
-      <td width="20" rowspan="12" align="center" valign="middle" bgcolor="#9ad2b0" style="font-family:Verdana, Geneva, sans-serif; font-size:12px; color:#000">&nbsp;</td>
+      <td width="20" rowspan="10" align="center" valign="middle" bgcolor="#9ad2b0" style="font-family:Verdana, Geneva, sans-serif; font-size:12px; color:#000">&nbsp;</td>
     </tr>
     <!--Bloque Lo que Viene: Desde aquí se pueden ocultar fechas en caso de que no exista información para la agenda.-->
     <tr>
       <td width="82" align="center" style="font-family:Verdana, Geneva, sans-serif; font-size:12px"><strong>24/06/2026</strong></td>
       <td width="480" bgcolor="#9ad2b0" style="font-family:Verdana, Geneva, sans-serif; font-size:12px; margin-left:5px; color:#000"><strong id="docs-internal-guid-8fba4c47-7fff-65c2-8d8c-c2f47ca5"><a style="text-decoration:none;color:#000" href="https://sociales.unc.edu.ar/content/segundo-congreso-nacional-de-estudios-interdisciplinares-sobre-diversidad-y-disidencias" target="_blank">Segundo Congreso Nacional de Estudios Interdisciplinarios sobre Diversidad Sexual y de Género</a></strong></td>
-    </tr>
-    <tr>
-      <td align="center" style="font-family:Verdana, Geneva, sans-serif; font-size:12px">&nbsp;</td>
-      <td bgcolor="#9ad2b0" style="font-family:Verdana, Geneva, sans-serif; font-size:12px; margin-left:5px; color:#000">&nbsp;</td>
-    </tr>
-    <tr>
-      <td align="center" style="font-family:Verdana, Geneva, sans-serif; font-size:12px">&nbsp;</td>
-      <td bgcolor="#9ad2b0" style="font-family:Verdana, Geneva, sans-serif; font-size:12px; margin-left:5px; color:#000">&nbsp;</td>
     </tr>
   </tbody>
 </table>
