--- a/249.html
+++ b/249.html
@@ -84,6 +84,15 @@ td a img {
   <tbody>
     <tr>
       <td width="27" height="29"><img src="https://sociales.unc.edu.ar/sites/default/files/icondestacadosinferiores.jpg" width="23" height="29" /></td>
+      <td height="29" align="left" valign="top" style="font-family:Verdana, Geneva, sans-serif; font-size:14px;"><h2 style="font-family:Verdana, Geneva, sans-serif; font-size:12px;"><a style="color:#087CCD; text-decoration:none" href="https://digesto.unc.edu.ar/bitstream/handle/123456789/600978/RR-2025-2639-UNC-REC.pdf" target="_blank">Receso estival del 2 al 30 de enero de 2026<br />
+      </a></h2></td>
+    </tr>
+  </tbody>
+</table>
+<table width="600" height="35" border="0" align="center" cellpadding="0" cellspacing="3">
+  <tbody>
+    <tr>
+      <td width="27" height="29"><img src="https://sociales.unc.edu.ar/sites/default/files/icondestacadosinferiores.jpg" width="23" height="29" /></td>
       <td height="29" align="left" valign="top" style="font-family:Verdana, Geneva, sans-serif; font-size:14px;"><h2 style="font-family:Verdana, Geneva, sans-serif; font-size:12px;"><a style="color:#087CCD; text-decoration:none" href="https://sociales.unc.edu.ar/content/nuevas-propuestas-academicas-en-sociales-cursos-de-verano" target="_blank">Nuevas propuestas académicas en Sociales: cursos de verano<br />
       </a></h2></td>
     </tr>
