--- a/249.html
+++ b/249.html
@@ -57,7 +57,7 @@ td a img {
     <tr>
       <td height="28" align="center" valign="top">
        
-        <h3 style="font-family:Verdana, Geneva, sans-serif; font-size:12px; "><strong>El viernes 12 de diciembre, en un auditorio colmado por la comunidad de Sociales, celebramos los <strong>10 años de la creación de nuestra querida Facultad de Ciencias Sociales</strong>, una década en la que tejimos memoria, construimos conocimiento y fortalecimos la defensa de la universidad pública.</strong></h3></td>
+        <h3 style="font-family:Verdana, Geneva, sans-serif; font-size:12px; "><strong>El viernes 12 de diciembre, en un auditorio colmado, celebramos los 10 años de la creación de nuestra querida Facultad de Ciencias Sociales, una década en la que tejimos memoria, construimos conocimiento y fortalecimos la defensa de la universidad pública.</strong></h3></td>
     </tr>
   </tbody>
 </table>
@@ -67,8 +67,8 @@ td a img {
     <td width="295"><a href="https://sociales.unc.edu.ar/content/m-s-de-300-asistentes-participaron-de-la-escuela-de-primavera-augm-2025" target="_blank"><img src="https://sociales.unc.edu.ar/sites/default/files/mas-de-300-asistentes-participaron-de-la-escuela-de-primavera-augm-2025.jpg" width="295" height="196" alt="" style="display: block; border-radius: 4px;" /></a><a href="https://sociales.unc.edu.ar/content/elecciones-de-directora-y-consejo-acad-mico-ipsis" target="_blank"></a></td>
   </tr>
   <tr>
-    <td width="299" height="48" align="left" valign="top"><h4><span style="font-family:Verdana, Geneva, sans-serif; font-size:12px; "><strong>A lo largo de este año tuvo un rol clave en la visibilización y denuncia del plan sistemático de vulneración de los derechos del colectivo de personas con discapacidad llevado a cabo por el gobierno nacional, a partir de una política de crueldad vinculada a la quita de derechos.  </strong></span></h4></td>
-    <td width="295" height="48" align="left" valign="top"><h4 style="font-family:Verdana, Geneva, sans-serif; font-size:12px; "><strong>El foco fue en analizar el papel de las universidades frente a los desafíos contemporáneos de las democracias, las disputas por las narrativas históricas, las memorias colectivas, la participación social y las alternativas emergentes   a  construir horizontes democráticos.</strong></h4></td>
+    <td width="299" height="48" align="left" valign="top"><h4><span style="font-family:Verdana, Geneva, sans-serif; font-size:12px; "><strong>A lo largo de este año tuvo un rol clave en la visibilización y denuncia del plan sistemático de vulneración de los derechos del colectivo de personas con discapacidad, llevado a cabo por el gobierno nacional a partir de una política de crueldad vinculada a la quita de derechos.  </strong></span></h4></td>
+    <td width="295" height="48" align="left" valign="top"><h4 style="font-family:Verdana, Geneva, sans-serif; font-size:12px; "><strong>El foco del encuentro fue analizar el papel de las universidades frente a los desafíos contemporáneos de las democracias, las disputas por las narrativas históricas, las memorias colectivas, la participación social y las alternativas emergentes a construir horizontes democráticos.</strong></h4></td>
   </tr>
 </tbody></table>
 <table width="600" height="35" border="0" align="center" cellpadding="0" cellspacing="3">
