--- a/250.html
+++ b/250.html
@@ -85,7 +85,7 @@ td a img {
 </table>
 <table width="602" border="0" align="center" cellpadding="0" cellspacing="0">
   <tr>
-    <td height="29" ><h2 style="font-family:Verdana, Geneva, sans-serif; font-size:14px;"><a style="color:#087CCD; text-decoration:none" href="https://sociales.unc.edu.ar/content/sociales-se-opone-al-proyecto-de-ley-de-baja-de-la-edad-de-punibilidadl" target="_blank"><strong id="docs-internal-guid-9a72e590-7fff-185e-5170-cb6102613f2a2">Sociales se opone al Proyecto de Ley de Baja de la edad de punibilidad</strong></a></h2></td>
+    <td height="29" ><h2 style="font-family:Verdana, Geneva, sans-serif; font-size:14px;"><a style="color:#087CCD; text-decoration:none" href="https://sociales.unc.edu.ar/content/sociales-se-opone-al-proyecto-de-ley-de-baja-de-la-edad-de-punibilidad" target="_blank"><strong id="docs-internal-guid-9a72e590-7fff-185e-5170-cb6102613f2a2">Sociales se opone al Proyecto de Ley de Baja de la edad de punibilidad</strong></a></h2></td>
   </tr>
 </table>
 <table width="600" border="0" align="center" cellspacing="0">
@@ -99,7 +99,7 @@ td a img {
   <tbody><tr>
     <td width="597" height="40" style="font-family:Verdana, Geneva, sans-serif; font-size:12px; text-decoration:none; line-height:20px"><p><strong><strong>#Compromiso Social Estudiantil  | </strong></strong><a href="https://sociales.unc.edu.ar/content/compromiso-social-estudiantil-info-importante-para-la-acreditaci-n-en-2025" target="_blank" style="text-decoration:none;color:#000">Info importante para la acreditación en 2025</a><br />
       <strong><strong>#Colación  | </strong></strong><a href="https://sociales.unc.edu.ar/content/tr-mite-de-egreso" target="_blank" style="text-decoration:none;color:#000">Información sobre trámite de egreso para la primera colación de 2026</a><br />
-      <strong><strong>#Egreso  | </strong></strong><a href="https://sociales.unc.edu.ar/content/tr-mite-de-egreso" target="_blank" style="text-decoration:none;color:#000">Regresar UNC: Proyecto de promoción y acompañamiento al egreso</a><br />
+      <strong><strong>#Egreso  | </strong></strong><a href="https://www.unc.edu.ar/académicas/regresar-unc-proyecto-de-promoción-y-acompañamiento-al-egreso" target="_blank" style="text-decoration:none;color:#000">Regresar UNC: Proyecto de promoción y acompañamiento al egreso</a><br />
       <strong><strong>#Inscripciones  | </strong></strong><a href="https://sociales.unc.edu.ar/node/3748" target="_blank" style="text-decoration:none;color:#000">Sumate al banco de veedores de la FCS</a><br />
       <strong><strong>#Internacionales  | </strong></strong><a href="https://sociales.unc.edu.ar/content/estudiantes-de-grado" target="_blank" style="text-decoration:none;color:#000">Movilidad internacional y oportunidades</a></p></td></tr></tbody></table>
 <table width="600" border="0" align="center" cellpadding="0" cellspacing="0">
@@ -117,11 +117,6 @@ td a img {
         <strong>#Curso </strong> <strong>| </strong><a href="https://sociales.unc.edu.ar/content/curso-de-posgrado-migraciones-desigualdades-y-derechos-miradas-cruzadas-entre-am-rica-latina" target="_blank" style="text-decoration:none;color:#000">Migraciones, desigualdades y derechos: miradas cruzadas entre américa latina y europa</a><br />
         <strong>#Seminario </strong> <strong>| </strong><a href="https://sociales.unc.edu.ar/content/seminario-de-posgrado-pensamiento-social-en-am-rica-latina" target="_blank" style="text-decoration:none;color:#000">Pensamiento Social en América Latina</a><br />
 <strong>#Convocatoria </strong> <strong>| </strong><a href="https://sociales.unc.edu.ar/content/convocatoria-presentaci-n-de-propuestas-de-cursos-de-actualizaci-n-profesional-para-2026" target="_blank" style="text-decoration:none;color:#000">Presentación de propuestas de Cursos de Actualización Profesional para 2026</a></p></td></tr></tbody></table>
-<table width="602" border="0" align="center" cellpadding="0" cellspacing="0">
-  <tr>
-    <td height="53" align="center" ><h2 style="font-family:Verdana, Geneva, sans-serif; font-size:14px;"><strong><a href="https://sociales.unc.edu.ar/content/aperturas-de-carreras-de-posgrado-2024-2025" target="_blank"><img src="https://sociales.unc.edu.ar/sites/default/files/apertura-de-cohortes-carreas-de-posgrado-en-sociales-2025.jpg" width="600" height="90" alt="" style="display: block; border-radius: 4px;"/></a></h2></td>
-  </tr>
-</table>
 <table width="600" border="0" align="center" cellpadding="0" cellspacing="0">
   <tbody><tr>
     <td height="19"><img src="https://sociales.unc.edu.ar/sites/default/files/iconoboletin_docente.jpg" width="600" height="30" style="display: block; border-radius: 4px;"></td>
@@ -187,7 +182,7 @@ td a img {
       <td width="595" height="20" style="font-family:Verdana, Geneva, sans-serif; font-size:12px; text-decoration:none; line-height:20px"><p><strong>#IPSIS |</strong> <a style="text-decoration:none;color:#000" href="https://sociales.unc.edu.ar/content/convocatoria-elecciones-complementarias-para-la-coordinaci-n-del-rea-estudios-sobre-pol-tica" target="_blank">Convocatoria a elecciones complementarias para la Coordinación del Área Estudios sobre Política y Sociedad</a><br />
       <strong>#Campaña |</strong> <a style="text-decoration:none;color:#000" href="https://sociales.unc.edu.ar/content/el-ipsis-convoca-adherir-la-campa-no-la-baja" target="_blank">El IPSIS convoca a adherir a la Campaña NO a la Baja</a><br />
       <strong>#Convocatoria |</strong> <a style="text-decoration:none;color:#000" href="https://sociales.unc.edu.ar/content/convocatoria-2026-financiamiento-proyectos-de-gesti-n-de-actividades-art-sticas-y-culturales" target="_blank">Financiamiento a Proyectos de Gestión de Actividades Artísticas y Culturales</a><br />
-      <strong>#Agenda |</strong> <a style="text-decoration:none;color:#000" href="https://sociales.unc.edu.ar/content/segundo-congreso-nacional-de-estudios-interdisc iplinares-sobre-diversidad-y-disidencias" target="_blank">Segundo Congreso Nacional de Estudios Interdisciplinarios sobre Diversidad Sexual y de Género</a><br />
+      <strong>#Agenda |</strong> <a style="text-decoration:none;color:#000" href="https://sociales.unc.edu.ar/content/segundo-congreso-nacional-de-estudios-interdisciplinares-sobre-diversidad-y-disidencias" target="_blank">Segundo Congreso Nacional de Estudios Interdisciplinarios sobre Diversidad Sexual y de Género</a><br />
       <strong>#Agenda |</strong> <a style="text-decoration:none;color:#000" href="https://congreso2026.fes-sociologia.com/" target="_blank">XVI Congreso Español de Sociología de la FES</a></p></td>
     </tr>
   </tbody>
