--- a/250.html
+++ b/250.html
@@ -88,6 +88,11 @@ td a img {
     <td height="29" ><h2 style="font-family:Verdana, Geneva, sans-serif; font-size:14px;"><a style="color:#087CCD; text-decoration:none" href="https://sociales.unc.edu.ar/content/sociales-se-opone-al-proyecto-de-ley-de-baja-de-la-edad-de-punibilidad" target="_blank"><strong id="docs-internal-guid-9a72e590-7fff-185e-5170-cb6102613f2a2">Sociales se opone al Proyecto de Ley de Baja de la edad de punibilidad</strong></a></h2></td>
   </tr>
 </table>
+<table width="602" border="0" align="center" cellpadding="0" cellspacing="0">
+  <tr>
+    <td height="53" align="center" ><h2 style="font-family:Verdana, Geneva, sans-serif; font-size:14px;"><strong><a href="https://sociales.unc.edu.ar/content/ingreso-2026-reanudamos-las-inscripciones-en-febrero" target="_blank"><img src="https://sociales.unc.edu.ar/sites/default/files/ingreso-2026-inscripciones-abiertas.jpg" width="600" height="90" alt="" style="display: block; border-radius: 4px;"/></a></h2></td>
+  </tr>
+</table>
 <table width="600" border="0" align="center" cellspacing="0">
   <tbody><tr>
  
